--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
       "eslint-config-google": "^0.14.0",
       "jscpd": "^3.4.5",
       "mocha": "^9.2.2",
-      "nyc": "^15.1.0"
+      "nyc": "^15.1.0",
+        "sinon": "^15.2.0"
     }
 }
